# ai-singularity-tracker

./: CLAUDE.md  README.md  main.py  pyproject.toml
data/processed/accountants_employed/: accountants_employed_processed.csv  accountants_employment_summary.csv
data/processed/business_applications/: business_applications_processed.csv
data/processed/capital_labor/: capital_labor_processed.csv
data/processed/college_wage_premium/: college_wage_premium_processed.csv
data/processed/electricity_consumption/: electricity_consumption_processed.csv
data/processed/graduate_unemployment_rate/: graduate_unemployment_rate_processed.csv
data/processed/info_jobs_per_grad/: info_jobs_per_grad_processed.csv
data/processed/it_equipment_investment/: it_equipment_investment_processed.csv
data/processed/labor_share/: labor_share_processed.csv
data/processed/median_wages/: median_wages_processed.csv
data/processed/nvidia_revenue/: nvidia_revenue_processed.csv
data/processed/occupation_employment/: occupation_employment_processed.csv
data/processed/prime_age_epop/: prime_age_epop_processed.csv
data/processed/quits_rate/: quits_rate_processed.csv
data/processed/real_gdp_per_capita/: real_gdp_per_capita_processed.csv
data/processed/software_investment/: software_investment_processed.csv
data/processed/tfp/: tfp_processed.csv
data/raw/accountants_employed/: accountants_apr22.csv  accountants_apr23.csv  (+41 more)
docs/: literature-review.md  year-of-no-return.md
src/dashboard/: app.py
src/pipeline/: fetch_labor_share.py  fetch_real_gdp_per_capita.py  utils.py
(+50 files in other folders)
