[project]
name = "ai-singularity-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
